refactor: security 기본 적용